* Homing projectiles now behave like in the original game running at 30 FPS! [Thanks to Drakona, Lothar, roncli, A Future Pilot, Ryusei117 and more]
* Fixed FPS fluctuations with VSync. [Thanks to derhass]
* Flashing effects properly scale to ingame brightness setting.
* In addition to quicksave, there is now a quickload key!
* Original base input sensitivity for all devices and mouse overrun option for mouse. [Thanks to the Retro team]
* Improved collision detection, fixing player damage being way too low in some ocassions. [Thanks to Drakona]
* Reworked OPTIONS menu.
* New texture filtering options! [Thanks to beware]
* Optional timers displaying countdowns for cloak and invulnerability.
* New tracker for Multiplayer games.
* Drastically improved positional accuracy and less latency in Multiplayer games.
* Revamped powerup management in Multiplayer which properly handles and prevents loss and excess of powerups.
* Important packets in Mulitplayer are handled in proper order, fixing a multitude of packet-loss related issues.
* A plethora of new Multiplayer options. [Thanks to the Retro team, A Future Pilot and many more]
* "Bright Players" Multiplayer option will now only affect players instead of all polygon models.
* New Multiplayer GAME INFO screen that can be toggled ingame, too.
* Fixed some Multiplayer scoring oddities.
* ... and many, many more bugfixes and improvements.


Known issues
------------
* On Windows the mouse is not correctly released if using ALT+TAB to minimize the game. This is not a bug in the program but rather the SDL library. It can be worked around by pausing the game and using ALT+ENTER to get the game to windowed mode. The mosue should not be stuck then anymore.
* Mac builds may suffer from crashes (or other random glitches) when playing MIDI music. This is not a bug in the program but rather an issue in timidity which SDL_mixer uses to play these files. Usingf a Soundtrack AddOn (which contains OGG files) should fix that problem.